Système de connexion avec token ok

--- a/frontend/src/style/body.sass
+++ b/frontend/src/style/body.sass
@@ -1,7 +1,17 @@
 body
     width: 425px
     height: 882px
+    background-color: #FFFF
 
     display: flex
     flex-direction: column
     align-items: center
+    justify-content: center
+
+#root
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    width: 425px
+    height: 882px
