--- a/frontend/src/style/form.sass
+++ b/frontend/src/style/form.sass
@@ -4,8 +4,10 @@
     flex-direction: column
     justify-content: space-between
     align-items: center
-    width: 90%
-    max-height: 500px
+    height: 500px
+    border: 1px black solid
+    border-radius: 15px
+    max-width: 400px
 
     &__field
         height: auto
@@ -15,5 +17,21 @@
         justify-content: space-between
         align-content: space-around
 
+        &--height
+            height: 200px
+
         &--error
             max-width: 280px
+
+.alert
+    margin-top: 25px
+    width: 90%
+    height: 50px
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    border: 1px red solid
+    border-radius: 15px
+    transform: scale(1)
+    transition: 1000ms
