--- a/frontend/src/style/form.sass
+++ b/frontend/src/style/form.sass
@@ -1,3 +1,11 @@
+.conteneur
+    width: 100%
+    height: 100%
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+
 .form
 
     display: flex
@@ -31,7 +39,8 @@
     flex-direction: column
     justify-content: center
     align-items: center
-    border: 1px red solid
-    border-radius: 15px
-    transform: scale(1)
-    transition: 1000ms
+
+    &__message
+        height: 50px
+        border: 2px red solid
+        border-radius: 15px
