Création d'un formulaire de MAJ du mot de passe

--- a/frontend/src/style/form.sass
+++ b/frontend/src/style/form.sass
@@ -17,6 +17,9 @@
     border-radius: 15px
     max-width: 400px
 
+    &--witch
+        height: 250px
+
     &__field
         height: auto
         width: 280px
