--- a/frontend/src/style/nav.sass
+++ b/frontend/src/style/nav.sass
@@ -5,7 +5,7 @@
     justify-content: space-around
 
     &__titre
-        width: 30%
+        width: 60%
 
     &__item
         list-style: none
@@ -15,4 +15,7 @@
         display: flex
         flex-direction: row
         justify-content: space-around
-        width: 60%
+        width: 30%
+
+        &:hover
+            cursor: pointer
