--- a/frontend/src/style/message.sass
+++ b/frontend/src/style/message.sass
@@ -15,7 +15,8 @@
             width: 20%
             display: flex
             justify-content: space-around
-            align-items: center
+            &:hover
+                cursor: pointer
 
     &__items
         display: flex
@@ -33,9 +34,12 @@
         justify-content: space-between
         width: 100%
         border-bottom: solid 1px red
+        align-items: center
 
         &__icons
             width: 20%
             display: flex
             justify-content: space-around
             align-items: center
+            &:hover
+                cursor: pointer
