--- a/frontend/src/style/message.sass
+++ b/frontend/src/style/message.sass
@@ -25,6 +25,7 @@
         border: solid 1px blue
         border-radius: 10px
         width: 100%
+        margin-bottom: 15px
 
     &__autor
         width: 80%
