Feat : Mise à jour du fil d'actualité mise en place des commentaires + édition des messages

--- a/frontend/src/style/message.sass
+++ b/frontend/src/style/message.sass
@@ -5,12 +5,15 @@
     align-items: center
     width: 90%
     height: auto
+    background-color: #F2F2F2
 
     &__footer
         display: flex
         flex-direction: row
         justify-content: space-between
         border-top: 1px solid yellow
+        margin-bottom: 15px
+
         &__icons
             width: 20%
             display: flex
@@ -29,6 +32,9 @@
 
     &__autor
         width: 80%
+
+    &__comments
+        border: solid 1px red
 
     &__head
         display: flex
