--- a/frontend/src/style/nav.sass
+++ b/frontend/src/style/nav.sass
@@ -3,6 +3,9 @@
     flex-direction: row
     width: 100%
     justify-content: space-around
+    background-color: #1877f2
+    margin-bottom: 15px
+    color: #FFF
 
     &__titre
         width: 60%
