--- a/frontend/src/style/body.sass
+++ b/frontend/src/style/body.sass
@@ -2,15 +2,35 @@ body
     width: 425px
     height: 882px
     background-color: #FFFF
-
     display: flex
     flex-direction: column
     align-items: center
     justify-content: center
-
+    @media all and (max-width : 1024px) and (min-width: 768px)
+        width: 768px
+        height: 1176px
+    @media all and (max-width : 1440px) and (min-width: 1024px)
+        width: 1024px
+        height: 1764px
+    @media all and (max-width : 2560px) and (min-width: 1440px)
+        width: 1440px
+        height: 1960px
 #root
     display: flex
     flex-direction: column
     align-items: center
+    justify-content: space-between
     width: 425px
     height: 882px
+    @media all and (max-width : 1024px) and (min-width: 768px)
+        width: 768px
+        height: 1176px
+
+    @media all and (max-width : 1440px) and (min-width: 1024px)
+        width: 1024px
+        height: 1764px
+
+    @media all and (max-width : 2561px) and (min-width: 1440px)
+        width: 1440px
+        height: 1960px
+        justify-content: space-between
