--- a/frontend/src/style/form.sass
+++ b/frontend/src/style/form.sass
@@ -6,8 +6,14 @@
     justify-content: center
     align-items: center
 
-.form
+    @media all and (max-width : 2560px) and (min-width: 768px)
+        flex-direction: row
+        justify-content: space-around
+        height: auto
+        width: 100%
+        margin-top: 15px
 
+.form
     display: flex
     flex-direction: column
     justify-content: space-between
@@ -16,6 +22,8 @@
     border: 1px black solid
     border-radius: 15px
     max-width: 400px
+    @media all and (max-width : 2560px) and (min-width: 768px)
+        width: 40%
 
     &--witch
         height: 250px
@@ -33,21 +41,3 @@
 
         &--error
             max-width: 280px
-
-.alert
-    margin-top: 25px
-    width: 90%
-    height: 50px
-    display: flex
-    flex-direction: column
-    justify-content: center
-    align-items: center
-
-    &__message
-        height: 50px
-        border: 2px red solid
-        border-radius: 15px
-        &--succes
-            border: 2px green solid
-   
-
