feat : FrontEnd gestion des emojis + backend correction des fichiers de migrations

--- a/frontend/src/style/main.sass
+++ b/frontend/src/style/main.sass
@@ -1,5 +1,6 @@
-.feed
+.main
     display: flex
     flex-direction: column
-    justify-content: center
+    justify-content: flex-start
     width: 90%
+    flex: 2
