--- a/frontend/src/style/message.sass
+++ b/frontend/src/style/message.sass
@@ -1,10 +1,10 @@
 .messages
     display: flex
     flex-direction: column
-    justify-content: space-between
     align-items: center
-    width: 90%
+    width: 100%
     height: auto
+    height: 90%
 
     &__footer
         display: flex
