--- a/frontend/src/style/footer.sass
+++ b/frontend/src/style/footer.sass
@@ -1,8 +1,22 @@
 .footer
-    display: flex
-    justify-content: row
-    justify-content: space-around
-    align-self: flex-end
     width: 100%
+    height: 10%
     color: #FFF
     background-color: #1877f2
+
+    @media all and (max-width : 2560px) and (min-width: 768px)
+        height: 2%
+
+    &__list
+        width: 100%
+        text-decoration: none
+        list-style-type: none
+        display: flex
+        flex-direction: column
+        justify-content: center
+        @media all and (max-width : 2560px) and (min-width: 768px)
+            flex-direction: row
+            justify-content: space-around
+
+        & a
+            text-decoration: none
