--- a/frontend/src/style/formMessage.sass
+++ b/frontend/src/style/formMessage.sass
@@ -3,3 +3,7 @@
     flex-direction: column
     justify-content: center
     width: 100%
+    height: 10%
+    margin-bottom: 15px
+    border: 1px solid green
+    border-radius: 15px
