--- a/frontend/src/style/groups.sass
+++ b/frontend/src/style/groups.sass
@@ -8,6 +8,12 @@
     @media all and (max-width : 2560px) and (min-width: 768px)
         grid-template-columns: repeat(5,1fr)
 
+    &__description
+        border: solid 1px red
+        margin-bottom: 15px
+        margin-top: 15px
+        border-radius: 15px
+
     &__items
         display: flex
         flex-direction: column
