--- a/frontend/src/style/nav.sass
+++ b/frontend/src/style/nav.sass
@@ -2,10 +2,14 @@
     display: flex
     flex-direction: row
     width: 100%
+    height: 10%
     justify-content: space-around
     background-color: #1877f2
     margin-bottom: 15px
     color: #FFF
+
+    @media all and (max-width : 2560px) and (min-width: 768px)
+        height: 5%
 
     &__titre
         width: 60%
