feat : mise en place des cookies

--- a/frontend/src/style/message.sass
+++ b/frontend/src/style/message.sass
@@ -36,6 +36,9 @@
     &__comments
         border: solid 1px red
 
+    &__like
+        border-radius: 180px
+
     &__head
         display: flex
         justify-content: space-between
