--- a/frontend/src/style/formMessage.sass
+++ b/frontend/src/style/formMessage.sass
@@ -3,7 +3,18 @@
     flex-direction: column
     justify-content: center
     width: 100%
-    height: 15%
+    min-height: 150px
     margin-bottom: 15px
     border: 1px solid green
     border-radius: 15px
+
+    &__input
+        height: 50%
+        border-radius: 15px
+    &__actions
+        height: 25%
+        width: 100%
+        display: flex
+        flex-direction: row
+        justify-content: space-around
+        align-items: center
