feat (api/admin):  Création de l'espace admin

--- a/frontend/src/style/alert.sass
+++ b/frontend/src/style/alert.sass
@@ -9,7 +9,7 @@
 
     &__message
         height: 50px
-        border: 2px red solid
         border-radius: 15px
+        color: #1877E6
         &--succes
             border: 2px green solid
