feat (formData) : mise en place de l'api formaData

--- a/frontend/src/style/message.sass
+++ b/frontend/src/style/message.sass
@@ -28,7 +28,7 @@
         border-radius: 10px
         width: 100%
         margin-bottom: 15px
-        background-color: #F2F2F2
+        background-color: #fff
 
     &__autor
         width: 80%
