--- a/frontend/src/style/body.sass
+++ b/frontend/src/style/body.sass
@@ -15,11 +15,14 @@ body
     @media all and (max-width : 2560px) and (min-width: 1440px)
         width: 1440px
         height: 1960px
+        align-items: center
+
 #root
     display: flex
     flex-direction: column
     align-items: center
     justify-content: space-between
+    background-color: #F2F2F2
     width: 425px
     height: 882px
     @media all and (max-width : 1024px) and (min-width: 768px)
@@ -33,4 +36,4 @@ body
     @media all and (max-width : 2561px) and (min-width: 1440px)
         width: 1440px
         height: 1960px
-        justify-content: space-between
+        align-content: center
