--- a/frontend/src/style/form.sass
+++ b/frontend/src/style/form.sass
@@ -3,7 +3,7 @@
     height: 100%
     display: flex
     flex-direction: column
-    justify-content: center
+    justify-content: space-around
     align-items: center
 
     @media all and (max-width : 2560px) and (min-width: 768px)
@@ -18,10 +18,12 @@
     flex-direction: column
     justify-content: space-between
     align-items: center
-    height: 500px
+    height: 400px
     border: 1px black solid
     border-radius: 15px
     max-width: 400px
+    background-color: #fff
+
     @media all and (max-width : 2560px) and (min-width: 768px)
         width: 40%
 
