--- a/frontend/src/style/groups.sass
+++ b/frontend/src/style/groups.sass
@@ -13,6 +13,11 @@
         margin-bottom: 15px
         margin-top: 15px
         border-radius: 15px
+        background-color: #fff
+
+    &__button
+        display: flex
+        justify-content: flex-end
 
     &__items
         display: flex
