feat (frontend react-responsive): mise en place de react responsive sur la barre de navigation et sur la selection des groupes

--- a/frontend/src/style/groups.sass
+++ b/frontend/src/style/groups.sass
@@ -8,6 +8,11 @@
     @media all and (max-width : 2560px) and (min-width: 768px)
         grid-template-columns: repeat(5,1fr)
 
+    &__ul
+        position: absolute
+        left: 50px
+        top: 150px
+
     &__description
         border: solid 1px red
         margin-bottom: 15px
