--- a/frontend/src/style/footer.sass
+++ b/frontend/src/style/footer.sass
@@ -1,11 +1,17 @@
 .footer
+    display: flex
     width: 100%
     height: 10%
     color: #FFF
     background-color: #1877f2
-
-    @media all and (max-width : 2560px) and (min-width: 768px)
-        height: 2%
+    @media all and (max-width : 1024px) and (min-width: 768px)
+        height: 5%
+    @media all and (max-width : 1440px) and (min-width: 1024px)
+        height: 5%
+    @media all and (max-width : 1920px) and (min-width: 1440px)
+        height: 5%
+    @media all and (max-width : 2560px) and (min-width: 1920px)
+        height: 5%
 
     &__list
         width: 100%
