--- a/frontend/src/style/form.sass
+++ b/frontend/src/style/form.sass
@@ -11,7 +11,7 @@
         justify-content: space-around
         height: auto
         width: 100%
-        margin-top: 15px
+        margin-top: 5%
 
 .form
     display: flex
