--- a/frontend/src/style/main.sass
+++ b/frontend/src/style/main.sass
@@ -4,3 +4,5 @@
     justify-content: flex-start
     width: 90%
     flex: 2
+    @media all and (max-width : 2560px) and (min-width: 768px)
+        width: 60%
