--- a/frontend/src/style/nav.sass
+++ b/frontend/src/style/nav.sass
@@ -6,23 +6,34 @@
     justify-content: space-around
     background-color: #1877f2
     margin-bottom: 15px
-    color: #FFF
+    & a
+        text-decoration: none
+        color: #FFF
 
     @media all and (max-width : 2560px) and (min-width: 768px)
-        height: 5%
+        height: 10%
 
     &__titre
         width: 60%
+        color: #FFF
 
     &__item
         list-style: none
-
+        &__underline
+            width: 50px
+            height: 10px
+            color: #fff
+            transform: scaleX(2)
+            left: 0px
     &__items
         list-style: none
         display: flex
         flex-direction: row
         justify-content: space-around
+        align-items: center
         width: 30%
+        @media all and (max-width : 2560px) and (min-width: 768px)
+            width: 40%
 
         &:hover
             cursor: pointer
