feat : mise en place des invitations

--- a/frontend/src/style/footer.sass
+++ b/frontend/src/style/footer.sass
@@ -4,6 +4,7 @@
     height: 10%
     color: #FFF
     background-color: #1877f2
+    align-self: flex-end
     @media all and (max-width : 1024px) and (min-width: 768px)
         height: 5%
     @media all and (max-width : 1440px) and (min-width: 1024px)
