--- a/frontend/src/style/body.sass
+++ b/frontend/src/style/body.sass
@@ -16,7 +16,10 @@ body
         width: 768px
     @media all and (max-width : 1440px) and (min-width: 1024px)
         width: 1024px
+
     @media all and (max-width : 1920px) and (min-width: 1440px)
         width: 1440px
+        min-height: 980px
+        height: auto
     @media all and (max-width : 2560px) and (min-width: 1920px)
         width: 1920px
