--- a/frontend/src/style/groups.sass
+++ b/frontend/src/style/groups.sass
@@ -10,8 +10,27 @@
 
     &__ul
         position: absolute
+        display: flex
+        flex-direction: column
+        justify-content: space-around
+        align-items: flex-start
+        background-color: #fff
+        border-radius: 15px
         left: 50px
-        top: 150px
+        top: 250px
+        height: auto
+        list-style-type: none
+        width: 10%
+        box-shadow: -9px 2px 8px 2px #c4c4c4
+
+        &:hover
+            cursor: pointer
+    &__li
+        border: 1px solid #1877E3
+        border-radius: 10px
+        width: 90%
+        height: 5%
+        margin-top: 5px
 
     &__description
         border: solid 1px red
@@ -19,10 +38,6 @@
         margin-top: 15px
         border-radius: 15px
         background-color: #fff
-
-    &__button
-        display: flex
-        justify-content: flex-end
 
     &__items
         display: flex
