--- a/frontend/src/style/message.sass
+++ b/frontend/src/style/message.sass
@@ -10,7 +10,6 @@
         display: flex
         flex-direction: row
         justify-content: space-between
-        border-top: 1px solid yellow
         margin-bottom: 15px
 
         &__icons
@@ -24,17 +23,17 @@
         display: flex
         flex-direction: column
         justify-content: space-around
-        border: solid 1px blue
-        border-radius: 10px
+        border-radius: 5px
         width: 100%
         margin-bottom: 15px
         background-color: #fff
+        box-shadow: -9px 2px 8px 2px #c4c4c4
 
     &__autor
         width: 80%
 
     &__comments
-        border: solid 1px red
+        box-shadow: -9px 2px 8px 2px #c4c4c4
 
     &__like
         border-radius: 180px
@@ -43,7 +42,6 @@
         display: flex
         justify-content: space-between
         width: 100%
-        border-bottom: solid 1px red
         align-items: center
 
         &__icons
