--- a/frontend/src/style/nav.sass
+++ b/frontend/src/style/nav.sass
@@ -2,7 +2,7 @@
     display: flex
     flex-direction: row
     width: 100%
-    height: 10%
+    min-height: 10%
     justify-content: space-around
     background-color: #1877f2
     margin-bottom: 15px
