feat : mise en place du système d'invitation + optimisation des useEffect pour mise à jour React 18

--- a/frontend/src/style/button.sass
+++ b/frontend/src/style/button.sass
@@ -4,6 +4,8 @@
     border-radius: 15px
     height: 35px
     width: 150px
+    &--width
+        width: auto
 
     &:hover
         cursor: pointer
