feat : (messages + commentaires) Ajout des emojis sur l'édition d'un message + possibilité d'éditer un message

--- a/frontend/src/style/formMessage.sass
+++ b/frontend/src/style/formMessage.sass
@@ -5,7 +5,7 @@
     width: 100%
     min-height: 150px
     margin-bottom: 15px
-    border: 1px solid green
+    box-shadow: -9px 2px 8px 2px #c4c4c4
     border-radius: 15px
 
     &__input
