--- a/frontend/src/style/comment.sass
+++ b/frontend/src/style/comment.sass
@@ -10,7 +10,7 @@
         display: flex
         flex-direction: column
         width: 90%
-        border: solid 1px green
+        border: solid 1px #1877f2
         border-radius: 15px
         margin-top: 15px
         background-color: #fff
