--- a/frontend/src/style/groups.sass
+++ b/frontend/src/style/groups.sass
@@ -33,7 +33,7 @@
         margin-top: 5px
 
     &__description
-        border: solid 1px red
+        box-shadow: -9px 2px 8px 2px #c4c4c4
         margin-bottom: 15px
         margin-top: 15px
         border-radius: 15px
