--- a/frontend/src/style/invite.sass
+++ b/frontend/src/style/invite.sass
@@ -1,7 +1,6 @@
 .invite
     display: flex
     flex-direction: column
-    justify-content: center
     width: 100%
     flex: 2
     @media all and (max-width : 1024px) and (min-width: 768px)
@@ -15,5 +14,7 @@
         background-color: #fff
         border-radius: 15px
         margin-bottom: 15px
+        &__span
+            width: 20%
     @media all and (max-width : 1024px) and (min-width: 768px)
         width: 60%
