--- a/frontend/src/style/nav.sass
+++ b/frontend/src/style/nav.sass
@@ -6,6 +6,12 @@
     justify-content: space-around
     background-color: #1877f2
     margin-bottom: 15px
+    align-items: center
+    &__user
+        display: flex
+        flex-direction: row
+        align-items: center
+        width: 60%
     & a
         text-decoration: none
         color: #FFF
@@ -14,7 +20,7 @@
         height: 10%
 
     &__titre
-        width: 60%
+        width: 90%
         color: #FFF
 
     &__item
@@ -25,6 +31,10 @@
             color: #fff
             transform: scaleX(2)
             left: 0px
+    &__picture
+        width: 50px
+        height: 50px
+        border-radius: 150px
     &__items
         list-style: none
         display: flex
