feat : suite à la modification du projet en date du 27/05 mise en place de la nouvelle charte graphique

--- a/frontend/src/style/button.sass
+++ b/frontend/src/style/button.sass
@@ -1,6 +1,6 @@
 .button
     color: #FFFF
-    background-color: #1877f2
+    background-color: #FFD7D7
     border-radius: 15px
     height: 35px
     width: 150px
