--- a/frontend/src/style/alert.sass
+++ b/frontend/src/style/alert.sass
@@ -10,6 +10,6 @@
     &__message
         height: 50px
         border-radius: 15px
-        color: #1877E6
+        color: #FFD7D7
         &--succes
             border: 2px green solid
