--- a/frontend/src/style/body.sass
+++ b/frontend/src/style/body.sass
@@ -3,13 +3,18 @@ body
     height: 882px
     margin: 0px
     background-color: #FFFF
+    font-family: Lato
+    @font-face
+        font-family: Lato
+        src: url('./vendors/Lato/Lato-Bold.ttf') format('truetype')
+        font-weight: normal
+        font-style: normal
 
 #root
     display: flex
     flex-direction: column
     align-items: center
     justify-content: space-between
-    background-color: #F2F2F2
     width: 425px
     height: 882px
     @media all and (max-width : 1024px) and (min-width: 768px)
