--- a/frontend/src/style/footer.sass
+++ b/frontend/src/style/footer.sass
@@ -3,7 +3,7 @@
     width: 100%
     height: 10%
     color: #FFF
-    background-color: #1877f2
+    background-color: #FD2D01
     align-self: flex-end
     @media all and (max-width : 1024px) and (min-width: 768px)
         height: 5%
