feat : Ajout des images de profils sur les messages

--- a/frontend/src/style/button.sass
+++ b/frontend/src/style/button.sass
@@ -1,6 +1,6 @@
 .button
     color: #FFFF
-    background-color: #FFD7D7
+    background-color: #4E5166
     border-radius: 15px
     height: 35px
     width: 150px
