--- a/frontend/src/style/message.sass
+++ b/frontend/src/style/message.sass
@@ -6,6 +6,9 @@
     height: auto
     height: 90%
 
+    &__picture
+        height: 50px
+        width: 50px
     &__footer
         display: flex
         flex-direction: row
