fix : correction du css au niveau des formulaires profils

--- a/frontend/src/style/alert.sass
+++ b/frontend/src/style/alert.sass
@@ -10,6 +10,6 @@
     &__message
         height: 50px
         border-radius: 15px
-        color: #FFD7D7
+        color: #4E5166
         &--succes
             border: 2px green solid
