--- a/frontend/src/style/profil.sass
+++ b/frontend/src/style/profil.sass
@@ -1,6 +1,9 @@
 .profil
     display: flex
     flex-direction: column
-    justify-content: space-around
     flex: 1
     align-items: center
+    &__form
+        display: flex
+        flex-direction: column
+        justify-content: flex-start
