--- a/frontend/src/style/form.sass
+++ b/frontend/src/style/form.sass
@@ -27,6 +27,13 @@
     @media all and (max-width : 2560px) and (min-width: 768px)
         width: 40%
 
+    &--comment
+        display: flex
+        flex-direction: row
+        align-items: center
+        height: 20px
+        width: 100%
+
     &--witch
         height: 250px
 
