--- a/frontend/src/style/form.sass
+++ b/frontend/src/style/form.sass
@@ -6,6 +6,11 @@
     justify-content: space-around
     align-items: center
 
+    &__logo
+        max-height: 25%
+
+        & img
+            max-height: 100%
     @media all and (max-width : 2560px) and (min-width: 768px)
         flex-direction: row
         justify-content: space-around
