feat : mise en place des images sur le fil d'actualité

--- a/frontend/src/style/message.sass
+++ b/frontend/src/style/message.sass
@@ -6,6 +6,11 @@
     height: auto
     height: 90%
 
+    &__image
+        width: 90%
+        display: flex
+        justify-content: center
+
     &__picture
         height: 50px
         width: 50px
