fix : Retour sur les anciennes couleurs avant la MAJ du projet openclassRooms

--- a/frontend/src/style/body.sass
+++ b/frontend/src/style/body.sass
@@ -3,10 +3,16 @@ body
     height: 882px
     margin: 0px
     background-color: #FFFF
-    font-family: Lato
+    font-family: Arial
     @font-face
         font-family: Lato
         src: url('./vendors/Lato/Lato-Bold.ttf') format('truetype')
+        font-weight: normal
+        font-style: normal
+        font-family: Lato
+    @font-face
+        font-family: Roboto
+        src: url('./vendors/Roboto/Roboto-Regular.ttf') format('truetype')
         font-weight: normal
         font-style: normal
 
