--- a/frontend/src/style/button.sass
+++ b/frontend/src/style/button.sass
@@ -1,6 +1,6 @@
 .button
     color: #FFFF
-    background-color: #4E5166
+    background-color: #4267b2
     border-radius: 15px
     height: 35px
     width: 150px
