--- a/frontend/src/style/groups.sass
+++ b/frontend/src/style/groups.sass
@@ -50,7 +50,11 @@
 
         &__img
             margin-top: 2px
-            width: 80%
+            width: 100%
+            max-height: 150px
+            object-fit: cover
+            border-top-left-radius: 30px
+            border-bottom-left-radius: 30px
 
         &__button
             width: 100%
