--- a/frontend/src/style/nav.sass
+++ b/frontend/src/style/nav.sass
@@ -4,7 +4,7 @@
     width: 100%
     min-height: 10%
     justify-content: space-around
-    background-color: #FD2D01
+    background-color: #4267b2
     margin-bottom: 15px
     align-items: center
     &__user
