--- a/frontend/src/style/message.sass
+++ b/frontend/src/style/message.sass
@@ -14,11 +14,15 @@
     &__picture
         height: 50px
         width: 50px
+        border-radius: 30px
+
     &__footer
         display: flex
         flex-direction: row
         justify-content: space-between
         margin-bottom: 15px
+        border-bottom-left-radius: 30px
+        border-bottom-right-radius: 30px
 
         &__icons
             width: 20%
@@ -31,7 +35,7 @@
         display: flex
         flex-direction: column
         justify-content: space-around
-        border-radius: 5px
+        border-radius: 30px
         width: 100%
         margin-bottom: 15px
         background-color: #fff
