--- a/frontend/src/style/message.sass
+++ b/frontend/src/style/message.sass
@@ -11,6 +11,9 @@
         display: flex
         justify-content: center
 
+        & img
+            max-width: 100%
+
     &__picture
         height: 50px
         width: 50px
